1.The related topics for the carousel are redirecting to the home page but not to their respective pages. - Fixed. 2.Footer section – copyrights and menus should be center aligned vertically. - Fixed 3.Console errors “Server responded with a status of 404” is displayed. - Fixed 4.In internet explorer, after clicking 'Read More' button when user scrolls down, there is a small disturbance. This should be fixed in “Solutions” and “Technologies” as well. - Fixed.

--- a/Seguro.Company.Web/Content/responsive.css
+++ b/Seguro.Company.Web/Content/responsive.css
@@ -110,9 +110,7 @@
 @media (max-width:820px) {
 }
 
-@media (max-width:1200px) {
-
-
+@media (max-width:780px) {
     .navbar-inverse .navbar-collapse {
         width: 100%;
         background: rgba(0, 0, 0, 0.86);
@@ -187,18 +185,16 @@
 
     .navbar-nav {
         float: none !important;
-        margin-top: 7.5px;
+        background-color: #333;
+        margin:0px 0px 0px 0px;
     }
-
-        .navbar-nav > li {
+    .navbar-nav > li {
             float: none;
-        }
-
-            .navbar-nav > li > a {
+    }
+    .navbar-nav > li > a {
                 padding-top: 10px;
                 padding-bottom: 10px;
-            }
-
+    }
     .collapse.in {
         display: block !important;
     }
@@ -295,7 +291,7 @@
 	
 	.lSSlideOuter .lSPager.lSpg {bottom: 280px;}
 	
-	footer{text-align:center;}
+	footer{text-align:center;position:absolute;}
 	footer .fnav,
 	footer .copyright {float: none;}
 	footer .fnav ul > li {margin-left: 0;padding: 0 10px;}
